updated swagger docs and verify token
