# Node_JS/express_mongoose_structure/src/routes/userRoutes.js
@@ -1,10 +1,14 @@
 const express = require("express");
-const { registerUser, loginUser } = require("../controllers/userController");
+const {
+  registerUser,
+  loginUser,
+  authenticateToken,
+} = require("../controllers/userController");
 
 const router = express.Router();
 
 router.post("/register", registerUser);
-
 router.post("/login", loginUser);
+router.post("/verify", authenticateToken);
 
 module.exports = router;
